tests/snapshots/snapshots__medicines_partial_tested.snap
---
source: tests/snapshots.rs
expression: result.screen
---
PANDEMIC DEFENSE   RUNNING   Tick: 0  Funds: $1000  RP: 0  Personnel: 50  Infected: 50.5K  Dead: 0
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────┐┌ Medicines ───────────────────────────────────────────────────────────────────────────────────────┐
│╔════════════════════════════╗   ┌────────────────────────────┐   ┌────────────────────────────┐  ││▶ Antiviral-A  (Antiviral)                                                                        │
│║North America             OK║   │Europe                    OK│   │Asia                    HIGH│  ││    $200  100.0K doses  Strain Alpha [UNTESTED]                                                   │
│║Pop: 500.0M                 ║   │Pop: 750.0M                 │   │Inf 50.0K                   │  ││                                                                                                  │
│║████████████████████████████║   │████████████████████████████│   │████████████████████████████│  ││  Antibiotic-B  (Antibiotic)                                                                      │
│║No infections               ║───│                            │───│                            │  ││    $150  100.0K doses  Strain Beta [UNTESTED]                                                    │
│║↔ Oceania                   ║   │                            │   │                            │  ││                                                                                                  │
│║                            ║   │                            │   │                            │  ││  Broad-Spectrum  (Broad-Spectrum)                                                                │
│╚════════════════════════════╝   └────────────────────────────┘   └────────────────────────────┘  ││    $400  200.0K doses  Strain Alpha, Strain Beta [Tested: 1/2]                                   │
│               │               ╱                │               ╱                │                ││                                                                                                  │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││                                                                                                  │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│  ││  [Enter] Select  [Esc] Close                                                                     │
││Inf 500                     │   │Pop: 1.4B                   │   │Pop: 45.0M                  │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Pause  [?] Help  [Q] Quit
