tests/snapshots/snapshots__research_panel_field_projects.snap
---
source: tests/snapshots.rs
expression: result.screen
---
PANDEMIC DEFENSE   PAUSED   Tick: 0  Funds: $1000  RP: 0  Personnel: 50  Infected: 50.5K  Dead: 0
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────┐┌ Field Research ──────────────────────────────────────────────────────────────────────────────────┐
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││▶ Identify: Unknown Pathogen #1                                                                   │
││North America             OK│   │Europe                    OK│   │Asia                    HIGH│  ││    10 RP  5 personnel  20 ticks                                                                  │
││Pop: 500.0M                 │   │Pop: 750.0M                 │   │Pop: 4.7B                   │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││  Identify: Unknown Pathogen #2                                                                   │
││No infections               │───│                            │───│                            │  ││    10 RP  5 personnel  20 ticks                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││  [Enter] Select  [Esc] Back                                                                      │
│↔ Oceania      │               ╱                │               ╱                │                ││                                                                                                  │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐  ││                                                                                                  │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│  ││                                                                                                  │
││Pop: 430.0M                 │   │Pop: 1.4B                   │   │Pop: 45.0M                  │  ││                                                                                                  │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
││                            │   │                            │   │                            │  ││                                                                                                  │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
│                                                                                                  ││                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Resume  [?] Help  [Q] Quit
