tests/snapshots/snapshots__research_progress_in_header.snap
---
source: tests/snapshots.rs
expression: output
---
PANDEMIC DEFENSE   RUNNING   Tick: 0  Funds: $1000  RP: 0  Personnel: 35/50  Infected: 50.5K  Dead: 0
Field: Identifying Unknown 40%  │  Bench: Antiviral-A 37%
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
┌ World Map ───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐                                                                                                      │
││North America             OK│   │Europe                    OK│   │Asia                    HIGH│                                                                                                      │
││Pop: 500.0M                 │   │Pop: 750.0M                 │   │Inf 50.0K                   │                                                                                                      │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│                                                                                                      │
││No infections               │───│                            │───│                            │                                                                                                      │
││↔ Oceania                   │   │                            │   │                            │                                                                                                      │
││                            │   │                            │   │                            │                                                                                                      │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘                                                                                                      │
│               │               ╱                │               ╱                │                                                                                                                    │
│┌────────────────────────────┐   ┌────────────────────────────┐   ┌────────────────────────────┐                                                                                                      │
││South America            LOW│   │Africa                    OK│   │Oceania                   OK│                                                                                                      │
││Inf 500                     │   │Pop: 1.4B                   │   │Pop: 45.0M                  │                                                                                                      │
││████████████████████████████│   │████████████████████████████│   │████████████████████████████│                                                                                                      │
││                            │   │                            │   │                            │                                                                                                      │
││                            │   │                            │   │                            │                                                                                                      │
││                            │   │                            │   │                            │                                                                                                      │
│└────────────────────────────┘   └────────────────────────────┘   └────────────────────────────┘                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
[T] Threats  [R] Research  [M] Medicines  [P] Policy  [Space] Pause  [?] Help  [Q] Quit
